--- a/.github/workflows/trivy.yaml
+++ b/.github/workflows/trivy.yaml
@@ -54,7 +54,7 @@ jobs:
     # github.event.repository context not available in scheduled workflows
     #if: github.event.repository.fork == false
     if: github.repository_owner == 'HariSekhon'
-    name: Trivy GitHub Security Tab
+    name: Trivy
     uses: HariSekhon/GitHub-Actions/.github/workflows/trivy.yaml@master
     with:
       debug: ${{ github.event.inputs.debug }}
