--- a/.github/workflows/trivy.yaml
+++ b/.github/workflows/trivy.yaml
@@ -1,6 +1,6 @@
 #
 #  Author: Hari Sekhon
-#  Date: 2023-05-12 22:20:09 +0100 (Fri, 12 May 2023)
+#  Date: Date: 2022-02-02 11:27:37 +0000 (Wed, 02 Feb 2022)
 #
 #  vim:ts=2:sts=2:sw=2:et
 #
@@ -54,7 +54,7 @@ jobs:
     # github.event.repository context not available in scheduled workflows
     #if: github.event.repository.fork == false
     if: github.repository_owner == 'HariSekhon'
-    name: Trivy
+    name: Trivy Filesystem Scan
     uses: HariSekhon/GitHub-Actions/.github/workflows/trivy.yaml@master
     with:
       debug: ${{ github.event.inputs.debug }}
